<resources>
    <string name="app_name">10119176UTS</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Music">Music</string>
    <string name="title_Daily">Daily Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>