<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a10119176uts.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.a10119176uts.ProfileFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.example.a10119176uts.ProfileFragment"
        android:label="@string/title_Daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a10119176uts.MusicFragment"
        android:label="@string/title_Music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a10119176uts.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>